--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
+@import "primeicons/primeicons.css";
+
+* {
+    margin: 0;
+}
+
+.button-cart {
+    color: black !important;
+    background: white !important;
+}
+
+.p-button {
+    color: #ffffff;
+    background: black;
+}
+
+.p-rating .p-rating-item.p-rating-item-active .p-rating-icon {
+    color: #FFC107;
+}
+
+.p-rating .p-rating-item {
+    width: 1.5rem;
+}
+
+.p-rating .p-rating-item .p-rating-icon {
+    color: black;
+}
