Implementation of cart event domain

--- a/src/app/domains/cart/feature/cart-view/cart-view.component.css
+++ b/src/app/domains/cart/feature/cart-view/cart-view.component.css
@@ -9,9 +9,11 @@
         justify-content: space-between;
     }
 
-    .cart-view__description {}
-
-    .cart-view__quantity {}
+    .cart-view__total {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
 
     .cart__quantity {
         display: flex;
